import("//flutter/impeller/tools/impeller.gni")

impeller_shaders("shaders") {
  name = "shaders"
  shaders = [
    "gbuffer.vert",
    "gbuffer.frag",
  ]
}

executable("bdero_pbr") {
  testonly = true

  sources = [
    "imgui_particle_text.cpp",
    "imgui_particle_text.h",
    "renderer.cc",
    "renderer.h",
  ]

  deps = [
    ":shaders",
    "imgui:impeller_backend",
    "//flutter/fml",
    "//flutter/impeller/renderer",
    "//third_party/glfw",
    "//third_party/imgui:imgui_glfw",
  ]

  if (is_mac) {
    sources += [ "main_mtl.mm" ]
    frameworks = [
      "AppKit.framework",
      "QuartzCore.framework",
    ]
  }
}
