import("//flutter/impeller/tools/impeller.gni")

impeller_shaders("imgui_shaders") {
  name = "imgui_shaders"
  shaders = [
    "imgui_raster.vert",
    "imgui_raster.frag",
  ]
}

source_set("imgui") {
  include_dirs = [
    ".",
    "//third_party/glfw/include",
  ]

  sources = [
    "imconfig.h",
    "imgui.cpp",
    "imgui.h",
    "imgui_draw.cpp",
    "imgui_internal.h",
    "imgui_tables.cpp",
    "imgui_widgets.cpp",
    "imstb_rectpack.h",
    "imstb_textedit.h",
    "imstb_truetype.h",
  ]
}

source_set("glfw") {
  public_deps = [
    ":imgui",
    "//third_party/glfw",
  ]

  sources = [
    "imgui_impl_glfw.cpp",
    "imgui_impl_glfw.h",
  ]
}

source_set("impeller_backend") {
  testonly = true

  public_deps = [
    ":imgui_shaders",
    "//third_party/imgui",
  ]

  deps = [ "//flutter/impeller/renderer" ]

  sources = [
    "imgui_impl_impeller.cc",
    "imgui_impl_impeller.h",
  ]
}
source_set("demo") {
  deps = [ ":imgui" ]

  sources = [ "imgui_demo.cpp" ]
}
